--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "layout",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ensiehasanaki.github.io/mafia-game",
+	"main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
