--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ensiehasanaki.github.io/mafia-game",
-	"main": "index.js",
+  "main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "use-immer": "^0.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
